--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PseudoGen">
-        <activity android:name=".CentralActivity"> </activity>
+        <activity android:name=".CodeEditorActivity"></activity>
+        <activity android:name=".CentralActivity"></activity>
         <activity android:name=".EmailSignInActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".MainActivity">
