--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,10 @@
         <activity
             android:name=".CodeEditorTabbedActivity"
             android:label="@string/title_activity_code_editor_tabbed"
-            android:theme="@style/Theme.PseudoGen.NoActionBar"></activity>
+            android:theme="@style/Theme.PseudoGen.NoActionBar">
+
+        </activity>
+
         <activity android:name=".CodeEditorActivity" />
         <activity android:name=".CodeActivity" />
         <activity android:name=".CentralActivity" />
