Fixed CodeEditor syntax highlighting. Works like a charm. Tweaked Theme for the app. TBD color schemes and CodeEditor UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         <activity
             android:name=".CodeEditorTabbedActivity"
             android:label="@string/title_activity_code_editor_tabbed"
-            android:theme="@style/Theme.PseudoGen.NoActionBar"></activity>
+            android:theme="@style/Theme.PseudoGen.NoActionBar">
+        </activity>
         <activity
             android:name=".CentralActivity"
             android:theme="@style/AppTheme.NoActionBar" />
