--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,14 +22,14 @@
         </activity>
         <activity
             android:name=".CentralActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/Theme.PseudoGen" />
         <activity
             android:name=".EmailSignInActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/Theme.PseudoGen" />
         <activity android:name=".LoginActivity" />
         <activity
             android:name=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/Theme.PseudoGen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
