--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.maharshiappdev.pseudogen">
-
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS"></uses-permission>
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -15,15 +13,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PseudoGen">
-        <activity android:name=".LearningWebViewActivity"></activity>
+        <activity android:name=".LearningWebViewActivity"
+            android:theme="@style/Theme.PseudoGen">
+        </activity>
         <activity
             android:name=".CodeEditorTabbedActivity"
             android:configChanges="uiMode"
             android:label="@string/title_activity_code_editor_tabbed"
-            android:theme="@style/Theme.PseudoGen.NoActionBar">
+            android:theme="@style/Theme.PseudoGen">
         </activity>
         <activity
             android:name=".CentralActivity"
+            android:configChanges="uiMode"
             android:theme="@style/Theme.PseudoGen" />
         <activity
             android:name=".EmailSignInActivity"
@@ -31,10 +32,10 @@
         <activity android:name=".LoginActivity" />
         <activity
             android:name=".MainActivity"
+            android:configChanges="uiMode"
             android:theme="@style/Theme.PseudoGen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
