--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PseudoGen">
-        <activity android:name=".LearningWebViewActivity"
+        <activity android:name=".UsingPseudoGenActivity"
             android:theme="@style/Theme.PseudoGen">
         </activity>
         <activity
