--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PseudoGen">
+        <activity android:name=".EditorSettingsActivity"></activity>
         <activity android:name=".ChallengesActivity" />
         <activity
             android:name=".UsingPseudoGenActivity"
@@ -60,4 +61,5 @@
                 android:resource="@xml/filepaths" />
         </provider>
     </application>
+
 </manifest>
